test/bad/type_missmatch_20.mpp
fun bar():int { return 1.0; };
